Add 'ghost space leave' command
